# tilde

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  constants.hpp  input.cpp  input.hpp  item.cpp  item.hpp  player.cpp  player.hpp  powerup.cpp  powerup.hpp  progressbar.cpp  progressbar.hpp  tilde.cpp
assets/: background.xcf  chair.xcf  fire.xcf  fridge.xcf  house.xcf  immunity.xcf  plant.xcf  speed.xcf  stealing.xcf  tilde.xm  tv.xcf
